* Fix case in desktop where error is over +/- * remove contribution from map box because it causes style errors * Fix photo item problem on iPhone 8

--- a/client/src/Components/PhotoItem/PhotoItem.module.css
+++ b/client/src/Components/PhotoItem/PhotoItem.module.css
@@ -4,6 +4,8 @@
   position: relative;
   overflow: hidden;
   display: inline-block;
+  flex-shrink: 0;
+  width: 300px;
   height: 300px;
 }
 .photoItem.hideItem {
@@ -81,5 +83,6 @@
   .photoItem {
     margin: 0px 8px 8px 0;
     height: 272px;
+    width: 272px;
   }
 }
